fix: scrollbar color on non-white background

--- a/index.css
+++ b/index.css
@@ -17,13 +17,16 @@ body {
     border-radius: 2px;
 }
 ::-webkit-scrollbar-track {
-	background: white; 
+	background: rgba(0, 0, 0, 0); 
     border-radius: 2px;
 }
 ::-webkit-scrollbar-thumb {
     width: 4px;
     border-radius: 2px;
-    background: rgba(0, 0, 0, 0.5); 
+    background: rgba(0, 0, 0, 0.15); 
+}
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(0, 0, 0, 0.25); 
 }
 textarea, input {
     font-family: 'Cambria'; 
